objects/Employee_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Bonnus__c</fullName>
        <label>Gross Annual Bonnus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual__c</fullName>
        <label>Gross Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Conditions_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notice_Period_days__c</fullName>
        <label>Notice Period (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Expiration_Date__c</fullName>
        <label>Trial Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Until__c</fullName>
        <label>Until</label>
        <type>Date</type>
    </fields>
    <label>Employee Condition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Employee__c</columns>
        <columns>From__c</columns>
        <columns>Until__c</columns>
        <columns>Gross_Annual__c</columns>
        <columns>Gross_Annual_Bonnus__c</columns>
        <columns>Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Employee Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>